--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 .header {
   width: 100%;
-  height: 5vw;
+  height: 75px;
   padding: 2vw;
   color: white;
   background-color: rgb(100, 171, 238);
